Ajuste no mapeamento das entidades; criação de repositórios para CRUD na base de dados; adição de conexão com banco de dados local (Oracle), dentre outras melhorias.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url=jdbc:oracle:thin:@svtcebd2:1524:bdhom
-spring.datasource.username=sca_view
-spring.datasource.password=Tc3#5C4c0N5uLt4
+# EXAMPLE OF POSSIBLE DATASOURCE URL's.
+# BY SID: 			jdbc:oracle:thin:@localhost:1522:XEPDB1
+# BY SERVICE NAME:	jdbc:oracle:thin:@localhost:1522/XEPDB1
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1522/XEPDB1
+spring.datasource.username=SITP
+spring.datasource.password=sitp
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
